1.5a
----

- Added "Credits" form
- Added "Error Report" module
- Added 5 new services:
    - Tu.tv
    - Shufuni
    - Spike
    - MySpaceTv
    - CinemaVIP

- Revised 1 service:
    - Yahoo! Videos

- Changed "Proxy Port" max. value from "4999" to "9999"
- Changed "Proxy password" "Echo mode -> normal" to "Echo mode -> Password"

- Fixed bug (Error: when the xUpdater was missing, the videos were not downloaded)
- Fixed bug (Error: downloads directory modified in main form was not saved)
- Fixed bug (Error: some downloaded videos were corrupted by stupid http class bug)
- Fixed bug (Error: the button "check for updates" in Options is now deactivated if xUpdater is missing)

- Improved "URL" validation functions

Windows:
--------

- Added ProgramVersion information (.RC)

Linux:
------

- Fixed bug (Error: "Play video" did not work, file not found error was raised)
- Fixed bug (Error: "Open downloads directory" did not work, some dist. did not open the directory)

Mac OS X:
---------

- Improved all dialogs

- Changed "Downloads Directory" default dir (to usr/{name}/downloads)