@@ -15,6 +15,7 @@
 
 - Changed "Proxy Port" max. value from "4999" to "9999"
 - Changed "Proxy password" "Echo mode -> normal" to "Echo mode -> Password"
+- Changed "xUpdater is missing" warning message, now is only displayed the first time (and not on each executation)
 
 - Fixed bug (Error: when the xUpdater was missing, the videos were not downloaded)
 - Fixed bug (Error: downloads directory modified in main form was not saved)
@@ -33,6 +34,8 @@ Linux:
 
 - Fixed bug (Error: "Play video" did not work, file not found error was raised)
 - Fixed bug (Error: "Open downloads directory" did not work, some dist. did not open the directory)
+
+- Changed executable name to "xvst"
 
 Mac OS X:
 ---------
